# semantic-chunkers

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: 00-chunkers-intro.ipynb  02-chunkers-async.ipynb
semantic_chunkers/: __init__.py  hybrid_layer.py  layer.py  route.py  schema.py  text.py
semantic_chunkers/chunkers/: __init__.py  base.py  consecutive.py  consecutive_sim.py  cumulative.py  cumulative_sim.py  regex.py  rolling_window.py  statistical.py
semantic_chunkers/encoders/: __init__.py  bm25.py  clip.py  cohere.py  fastembed.py  google.py  huggingface.py  mistral.py  openai.py  tfidf.py  vit.py  zure.py
semantic_chunkers/index/: __init__.py  local.py  pinecone.py  qdrant.py
semantic_chunkers/llms/: __init__.py  base.py  cohere.py  llamacpp.py  mistral.py  ollama.py  openai.py  openrouter.py  zure.py
semantic_chunkers/splitters/: __init__.py  base.py  regex.py  sentence.py
semantic_chunkers/utils/: function_call.py  llm.py  text.py
tests/functional/: test_linear.py
tests/integration/encoders/: test_openai_integration.py
tests/unit/: test_chunkers.py  test_hybrid_layer.py  test_layer.py  test_regex_chunker.py  test_regex_splitter.py  test_route.py  test_schema.py  test_splitters.py  test_text.py
tests/unit/encoders/: test_azure.py  test_base.py  test_bm25.py  test_clip.py  test_cohere.py  test_fastembed.py  test_google.py  test_hfendpointencoder.py  test_huggingface.py  test_mistral.py  test_openai.py  test_tfidf.py  test_vit.py
tests/unit/llms/: test_llm_azure_openai.py  test_llm_base.py  test_llm_cohere.py  test_llm_llamacpp.py  test_llm_mistral.py  test_llm_ollama.py  test_llm_openai.py  test_llm_openrouter.py
