[project]
name = "semantic-chunkers"
version = "0.1.0"
description = "Super advanced chunking methods for AI"
authors = [{name = "Aurelio AI", email = "hello@aurelio.ai"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.5.3",
    "numpy>=1.26.0",
    "colorlog>=6.8.0",
    "colorama>=0.4.6",
    "regex>=2023.12.25",
    "tiktoken>=0.7.0,<1.0.0",
    "requests-mock>=1.12.1",
]

[project.optional-dependencies]
stats = ["matplotlib>=3.8.3"]

[project.dependency-groups]
dev = [
    "ipykernel>=6.25.0",
    "ruff>=0.1.5",
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.23.7",
    "mypy>=1.7.1",
    "types-pyyaml>=6.0.12.12",
    "types-requests>=2.31.0",
    "black[jupyter]>=23.12.1,<24.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_chunkers"]

[tool.ruff.per-file-ignores]
"*.ipynb" = ["ALL"]

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true