[project]
name = "semantic-chunkers"
version = "0.1.0"
description = "Super advanced chunking methods for AI"
authors = [{name = "Aurelio AI", email = "hello@aurelio.ai"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.5.3",
    "numpy>=1.26.0",
    "colorlog>=6.8.0",
    "colorama>=0.4.6",
    "regex>=2023.12.25",
    "tiktoken>=0.7.0,<1.0.0",
]

[project.optional-dependencies]
stats = ["matplotlib>=3.8.3"]
dev = [
    "ipykernel>=6.25.0,<7",
    "ruff>=0.11.2,<0.12",
    "pytest~=8.2",
    "pytest-mock>=3.12.0,<4",
    "pytest-cov>=4.1.0,<5",
    "pytest-xdist>=3.5.0,<4",
    "pytest-asyncio>=0.24.0,<0.25",
    "mypy>=1.7.1,<2",
    "types-pyyaml>=6.0.12.12,<7",
    "requests-mock>=1.12.1,<2",
    "types-requests>=2.31.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_chunkers"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["ALL"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "T201", "NPY201"]
ignore = ["E501", "T201"]

[tool.mypy]
ignore_missing_imports = true